scripts/mlops/sharinghub/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sh
  namespace: sharinghub
  annotations:
    kubernetes.io/ingress.class: ${INGRESS_CLASS}
${CUSTOM_INGRESS_ANNOTATIONS}
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: sharinghub.$INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sharinghub
                port:
                  number: 8000
  tls:
    - hosts:
        - sharinghub.$INGRESS_HOST
      secretName: sh-tls
